fix overflow

--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -6,6 +6,7 @@
 }
 
 .personal-info {
+    overflow-x: hidden;
     background-image: url('@assets/images/background-about.jpg');
     background-size: cover;
     background-position: right top;
